# trading-data-pipeline

./: .gitignore  README.md  config_example.py  docker-compose.yml  indices_etl.py  pyproject.toml  stocks_etl.py
